--- a/src/main/resources/view/Customer.fxml
+++ b/src/main/resources/view/Customer.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.restaurant_management_system.Controllers.mainFormController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.restaurant_management_system.Controllers.MainControllerCustomer">
     <children>
         <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
             <children>
@@ -31,10 +31,7 @@
                             <children>
                                 <AnchorPane layoutX="11.0" layoutY="161.0" prefHeight="600.0" prefWidth="222.0" styleClass="nav-form" stylesheets="@../styles/mainFromDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <children>
-                                        <Button fx:id="dashboard_btn" layoutX="31.0" layoutY="120.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="210.0" styleClass="nav-btn" stylesheets="@../styles/mainFromDesign.css" text="Dashboard" />
-                                        <Button fx:id="inventory_btn" layoutX="32.0" layoutY="166.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="210.0" styleClass="nav-btn" stylesheets="@../styles/mainFromDesign.css" text="Inventory" />
-                                        <Button fx:id="menu_btn" layoutX="31.0" layoutY="216.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="210.0" styleClass="nav-btn" stylesheets="@../styles/mainFromDesign.css" text="Menu" />
-                                        <Button fx:id="customers_btn" layoutX="31.0" layoutY="260.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="210.0" styleClass="nav-btn" stylesheets="@../styles/mainFromDesign.css" text="Customers" />
+                                        <Button fx:id="menu_btn" layoutX="32.0" layoutY="204.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="nav-btn" stylesheets="@../styles/mainFromDesign.css" text="Menu" />
                               <AnchorPane layoutX="22.0" layoutY="409.0" prefHeight="158.0" prefWidth="169.0" styleClass="glass">
                                  <children>
                                     <Button fx:id="logout_btn" layoutX="10.0" layoutY="103.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="137.0" styleClass="nav-btn" stylesheets="@../styles/mainFromDesign.css" text="Sign out" />
@@ -142,7 +139,7 @@
                               </Label>
                                     </children>
                                 </AnchorPane>
-                                <AnchorPane fx:id="inventory_form" layoutX="72.0" layoutY="200.0" prefHeight="600.0" prefWidth="878.0" stylesheets="@../styles/mainFromDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <AnchorPane fx:id="inventory_form" layoutX="72.0" layoutY="200.0" prefHeight="600.0" prefWidth="878.0" stylesheets="@../styles/mainFromDesign.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <children>
                                         <AnchorPane layoutX="14.0" layoutY="285.0" prefHeight="301.0" prefWidth="853.0" styleClass="white-bg" stylesheets="@../styles/mainFromDesign.css" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="285.0">
                                             <children>
@@ -232,7 +229,7 @@
                                                     <columns>
                                                         <TableColumn fx:id="menu_col_productName" prefWidth="115.0" text="Product Name" />
                                                         <TableColumn fx:id="menu_col_quantity" prefWidth="79.0" text="Quantity" />
-                                                        <TableColumn fx:id="menu_col_price" prefWidth="99.0" text="Price ($)" />
+                                                        <TableColumn fx:id="menu_col_price" prefWidth="99.0" text="Price (Tk)" />
                                                     </columns>
                                                 </TableView>
                                                 <Label layoutX="71.0" layoutY="285.0" prefHeight="17.0" prefWidth="49.0" text="Total: " AnchorPane.bottomAnchor="264.0" AnchorPane.rightAnchor="198.0">
@@ -240,7 +237,7 @@
                                                         <Font size="15.0" />
                                                     </font>
                                                 </Label>
-                                                <Label fx:id="menu_total" layoutX="126.0" layoutY="283.0" prefHeight="21.0" prefWidth="127.0" text="\$0.0" AnchorPane.bottomAnchor="262.0" AnchorPane.rightAnchor="67.0">
+                                                <Label fx:id="menu_total" layoutX="126.0" layoutY="283.0" prefHeight="21.0" prefWidth="127.0" text="Tk0.0" AnchorPane.bottomAnchor="262.0" AnchorPane.rightAnchor="67.0">
                                                     <font>
                                                         <Font size="15.0" />
                                                     </font>
@@ -250,23 +247,24 @@
                                                         <Font size="15.0" />
                                                     </font>
                                                 </Label>
-                                                <TextField fx:id="menu_amount" layoutX="126.0" layoutY="311.0" prefHeight="26.0" prefWidth="68.0" promptText="\$0.0" AnchorPane.bottomAnchor="229.0" AnchorPane.rightAnchor="126.0" />
+                                                <TextField fx:id="menu_amount" layoutX="126.0" layoutY="311.0" prefHeight="26.0" prefWidth="68.0" promptText="Tk0.0" AnchorPane.bottomAnchor="229.0" AnchorPane.rightAnchor="126.0" />
                                                 <Label layoutX="73.0" layoutY="345.0" text="Change:" AnchorPane.bottomAnchor="204.0" AnchorPane.rightAnchor="201.0">
                                                     <font>
                                                         <Font size="15.0" />
                                                     </font>
                                                 </Label>
-                                                <Label fx:id="menu_change" layoutX="126.0" layoutY="343.0" prefHeight="21.0" prefWidth="127.0" text="\$0.0" AnchorPane.bottomAnchor="202.0" AnchorPane.rightAnchor="67.0">
+                                                <Label fx:id="menu_change" layoutX="126.0" layoutY="343.0" prefHeight="21.0" prefWidth="127.0" text="Tk0.0" AnchorPane.bottomAnchor="202.0" AnchorPane.rightAnchor="67.0">
                                                     <font>
                                                         <Font size="15.0" />
                                                     </font>
                                                 </Label>
-                                                <Button fx:id="menu_payBtn" layoutX="15.0" layoutY="420.0" mnemonicParsing="false" onAction="#menuPayBtn" prefHeight="41.0" prefWidth="290.0" styleClass="btn" stylesheets="@../styles/mainFromDesign.css" text="Pay" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" />
+                                                <Button fx:id="menu_payBtn" layoutX="15.0" layoutY="409.0" mnemonicParsing="false" onAction="#menuPayBtn" prefHeight="41.0" prefWidth="290.0" styleClass="btn" stylesheets="@../styles/mainFromDesign.css" text="Pay" AnchorPane.bottomAnchor="84.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" />
                                                 <Button fx:id="menu_removeBtn" layoutX="15.0" layoutY="489.0" mnemonicParsing="false" onAction="#menuRemoveBtn" prefHeight="41.0" prefWidth="290.0" styleClass="btn" stylesheets="@../styles/mainFromDesign.css" text="Remove" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="15.0" />
                                     <Button fx:id="menu_amount_enter_btn" layoutX="213.0" layoutY="277.0" mnemonicParsing="false" onAction="#menuAmount" prefHeight="26.0" prefWidth="61.0" styleClass="btn" text="Enter" />
+                                    <Button fx:id="menu_refresh_btn" layoutX="16.0" layoutY="361.0" mnemonicParsing="false" onAction="#refreshMenu" prefHeight="41.0" prefWidth="290.0" styleClass="btn" stylesheets="@../styles/mainFromDesign.css" text="Refresh" />
                                             </children>
                                         </AnchorPane>
-                                          <ScrollPane fx:id="menu_scrollPane" layoutX="14.0" layoutY="48.0" prefHeight="542.0" prefWidth="533.0" styleClass="radius" stylesheets="@../styles/mainFromDesign.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="331.0" AnchorPane.topAnchor="48.0">
+                                          <ScrollPane fx:id="menu_scrollPane" layoutX="14.0" layoutY="42.0" prefHeight="542.0" prefWidth="533.0" styleClass="radius" stylesheets="@../styles/mainFromDesign.css" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="331.0" AnchorPane.topAnchor="42.0">
                                               <content>
                                                   <GridPane fx:id="menu_gridPane" prefHeight="68.0" prefWidth="77.0">
                                                       <columnConstraints>
@@ -286,11 +284,19 @@
                                                   </GridPane>
                                               </content>
                                           </ScrollPane>
-                              <Label layoutX="17.0" layoutY="14.0" prefHeight="26.0" prefWidth="78.0" styleClass="wh" stylesheets="@../styles/mainFromDesign.css" text="Menu">
-                                 <font>
-                                    <Font size="11.0" />
-                                 </font>
-                              </Label>
+                              <AnchorPane layoutX="39.0" layoutY="34.0" prefHeight="533.0" prefWidth="484.0" visible="false">
+                                 <children>
+                                    <TableView prefHeight="200.0" prefWidth="488.0">
+                                      <columns>
+                                        <TableColumn minWidth="20.0" prefWidth="75.0" text="Product ID" />
+                                        <TableColumn prefWidth="111.0" text="Product Name" />
+                                          <TableColumn prefWidth="95.0" text="Type" />
+                                          <TableColumn prefWidth="87.0" text="Price" />
+                                          <TableColumn prefWidth="91.0" text="Status" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane fx:id="customers_form" layoutX="114.0" layoutY="128.0" prefHeight="600.0" prefWidth="878.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
